# SZE-MOSZE-2020-TeamlessName

./: BaseUnit.cpp  BaseUnit.h  Damage.h  Exceptions.h  Game.cpp  Game.h  Hero.cpp  Hero.h  JSON.cpp  JSON.h  JsonParser.cpp  JsonParser.h  Map.cpp  Map.h  MarkedMap.cpp  MarkedMap.h  Monster.cpp  Monster.h  Player.cpp  Player.h  PreparedGame.cpp  PreparedGame.h  README.md  Report.md  _base_unit_8h_source.html  _damage_8h_source.html  _exceptions_8h_source.html  _game_8h_source.html  _hero_8h_source.html  _j_s_o_n_8h_source.html  _json_parser_8h_source.html  _map_8h_source.html  _marked_map_8h_source.html  _monster_8h_source.html  _player_8h_source.html  _prepared_game_8h_source.html  annotated.html  autotoc_md0.html  class_base_unit-members.html  class_base_unit.html  (+127 more)
Report/: Report.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+14 more)
test/: CMakeLists.txt  parser_test.cpp  unit_Test2.json  unit_Test3.json  unit_test.cpp
test/units/: unit_Test3.json
units/: Blood_Raven.json  Dark_Wanderer.json  Fallen.json  Zombie.json  output1.txt  prepared_game.json  unit1.json  unit2.json  unit3.json
(+5 files in other folders)
